package(default_visibility = ["//visibility:public"])
load("@bp2build//build/bazel/rules:soong_module.bzl", "soong_module")



cc_library(
    name = "libm",
    copts = [
        "-D__BIONIC_LP32_USE_LONG_DOUBLE",
        "-D_BSD_SOURCE",
        "-DFLT_EVAL_METHOD=0",
        "-include freebsd-compat.h",
        "-fno-math-errno",
        "-Wall",
        "-Werror",
        "-Wno-missing-braces",
        "-Wno-parentheses",
        "-Wno-sign-compare",
        "-Wno-unknown-pragmas",
        "-Wno-unused-const-variable",
        "-Wno-unused-variable",
    ],
    linkopts = [
        "-Wl,--Bsymbolic-functions",
    ],
    srcs = [
        "upstream-freebsd/lib/msun/bsdsrc/b_exp.c",
        "upstream-freebsd/lib/msun/bsdsrc/b_log.c",
        "upstream-freebsd/lib/msun/bsdsrc/b_tgamma.c",
        "upstream-freebsd/lib/msun/src/catrig.c",
        "upstream-freebsd/lib/msun/src/catrigf.c",
        "upstream-freebsd/lib/msun/src/e_acos.c",
        "upstream-freebsd/lib/msun/src/e_acosf.c",
        "upstream-freebsd/lib/msun/src/e_acosh.c",
        "upstream-freebsd/lib/msun/src/e_acoshf.c",
        "upstream-freebsd/lib/msun/src/e_asin.c",
        "upstream-freebsd/lib/msun/src/e_asinf.c",
        "upstream-freebsd/lib/msun/src/e_atan2.c",
        "upstream-freebsd/lib/msun/src/e_atan2f.c",
        "upstream-freebsd/lib/msun/src/e_atanh.c",
        "upstream-freebsd/lib/msun/src/e_atanhf.c",
        "upstream-freebsd/lib/msun/src/e_cosh.c",
        "upstream-freebsd/lib/msun/src/e_coshf.c",
        "upstream-freebsd/lib/msun/src/e_fmod.c",
        "upstream-freebsd/lib/msun/src/e_fmodf.c",
        "upstream-freebsd/lib/msun/src/e_gamma.c",
        "upstream-freebsd/lib/msun/src/e_gammaf.c",
        "upstream-freebsd/lib/msun/src/e_gammaf_r.c",
        "upstream-freebsd/lib/msun/src/e_gamma_r.c",
        "upstream-freebsd/lib/msun/src/e_hypot.c",
        "upstream-freebsd/lib/msun/src/e_hypotf.c",
        "upstream-freebsd/lib/msun/src/e_j0.c",
        "upstream-freebsd/lib/msun/src/e_j0f.c",
        "upstream-freebsd/lib/msun/src/e_j1.c",
        "upstream-freebsd/lib/msun/src/e_j1f.c",
        "upstream-freebsd/lib/msun/src/e_jn.c",
        "upstream-freebsd/lib/msun/src/e_jnf.c",
        "upstream-freebsd/lib/msun/src/e_lgamma.c",
        "upstream-freebsd/lib/msun/src/e_lgammaf.c",
        "upstream-freebsd/lib/msun/src/e_lgammaf_r.c",
        "upstream-freebsd/lib/msun/src/e_lgamma_r.c",
        "upstream-freebsd/lib/msun/src/e_log10.c",
        "upstream-freebsd/lib/msun/src/e_log10f.c",
        "upstream-freebsd/lib/msun/src/e_remainder.c",
        "upstream-freebsd/lib/msun/src/e_remainderf.c",
        "upstream-freebsd/lib/msun/src/e_rem_pio2.c",
        "upstream-freebsd/lib/msun/src/e_rem_pio2f.c",
        "upstream-freebsd/lib/msun/src/e_scalb.c",
        "upstream-freebsd/lib/msun/src/e_scalbf.c",
        "upstream-freebsd/lib/msun/src/e_sinh.c",
        "upstream-freebsd/lib/msun/src/e_sinhf.c",
        "upstream-freebsd/lib/msun/src/e_sqrt.c",
        "upstream-freebsd/lib/msun/src/e_sqrtf.c",
        "upstream-freebsd/lib/msun/src/k_cos.c",
        "upstream-freebsd/lib/msun/src/k_cosf.c",
        "upstream-freebsd/lib/msun/src/k_exp.c",
        "upstream-freebsd/lib/msun/src/k_expf.c",
        "upstream-freebsd/lib/msun/src/k_rem_pio2.c",
        "upstream-freebsd/lib/msun/src/k_sin.c",
        "upstream-freebsd/lib/msun/src/k_sinf.c",
        "upstream-freebsd/lib/msun/src/k_tan.c",
        "upstream-freebsd/lib/msun/src/k_tanf.c",
        "upstream-freebsd/lib/msun/src/s_asinh.c",
        "upstream-freebsd/lib/msun/src/s_asinhf.c",
        "upstream-freebsd/lib/msun/src/s_atan.c",
        "upstream-freebsd/lib/msun/src/s_atanf.c",
        "upstream-freebsd/lib/msun/src/s_carg.c",
        "upstream-freebsd/lib/msun/src/s_cargf.c",
        "upstream-freebsd/lib/msun/src/s_cargl.c",
        "upstream-freebsd/lib/msun/src/s_cbrt.c",
        "upstream-freebsd/lib/msun/src/s_cbrtf.c",
        "upstream-freebsd/lib/msun/src/s_ccosh.c",
        "upstream-freebsd/lib/msun/src/s_ccoshf.c",
        "upstream-freebsd/lib/msun/src/s_ceil.c",
        "upstream-freebsd/lib/msun/src/s_ceilf.c",
        "upstream-freebsd/lib/msun/src/s_cexp.c",
        "upstream-freebsd/lib/msun/src/s_cexpf.c",
        "upstream-freebsd/lib/msun/src/s_cimag.c",
        "upstream-freebsd/lib/msun/src/s_cimagf.c",
        "upstream-freebsd/lib/msun/src/s_cimagl.c",
        "upstream-freebsd/lib/msun/src/s_clog.c",
        "upstream-freebsd/lib/msun/src/s_clogf.c",
        "upstream-freebsd/lib/msun/src/s_conj.c",
        "upstream-freebsd/lib/msun/src/s_conjf.c",
        "upstream-freebsd/lib/msun/src/s_conjl.c",
        "upstream-freebsd/lib/msun/src/s_copysign.c",
        "upstream-freebsd/lib/msun/src/s_copysignf.c",
        "upstream-freebsd/lib/msun/src/s_cos.c",
        "upstream-freebsd/lib/msun/src/s_cpow.c",
        "upstream-freebsd/lib/msun/src/s_cpowf.c",
        "upstream-freebsd/lib/msun/src/s_cpowl.c",
        "upstream-freebsd/lib/msun/src/s_cproj.c",
        "upstream-freebsd/lib/msun/src/s_cprojf.c",
        "upstream-freebsd/lib/msun/src/s_cprojl.c",
        "upstream-freebsd/lib/msun/src/s_creal.c",
        "upstream-freebsd/lib/msun/src/s_crealf.c",
        "upstream-freebsd/lib/msun/src/s_creall.c",
        "upstream-freebsd/lib/msun/src/s_csinh.c",
        "upstream-freebsd/lib/msun/src/s_csinhf.c",
        "upstream-freebsd/lib/msun/src/s_csqrt.c",
        "upstream-freebsd/lib/msun/src/s_csqrtf.c",
        "upstream-freebsd/lib/msun/src/s_ctanh.c",
        "upstream-freebsd/lib/msun/src/s_ctanhf.c",
        "upstream-freebsd/lib/msun/src/s_erf.c",
        "upstream-freebsd/lib/msun/src/s_erff.c",
        "upstream-freebsd/lib/msun/src/s_expm1.c",
        "upstream-freebsd/lib/msun/src/s_expm1f.c",
        "upstream-freebsd/lib/msun/src/s_fdim.c",
        "upstream-freebsd/lib/msun/src/s_finite.c",
        "upstream-freebsd/lib/msun/src/s_finitef.c",
        "upstream-freebsd/lib/msun/src/s_floor.c",
        "upstream-freebsd/lib/msun/src/s_floorf.c",
        "upstream-freebsd/lib/msun/src/s_fma.c",
        "upstream-freebsd/lib/msun/src/s_fmaf.c",
        "upstream-freebsd/lib/msun/src/s_fmax.c",
        "upstream-freebsd/lib/msun/src/s_fmaxf.c",
        "upstream-freebsd/lib/msun/src/s_fmin.c",
        "upstream-freebsd/lib/msun/src/s_fminf.c",
        "upstream-freebsd/lib/msun/src/s_frexp.c",
        "upstream-freebsd/lib/msun/src/s_frexpf.c",
        "upstream-freebsd/lib/msun/src/s_ilogb.c",
        "upstream-freebsd/lib/msun/src/s_ilogbf.c",
        "upstream-freebsd/lib/msun/src/s_llrint.c",
        "upstream-freebsd/lib/msun/src/s_llrintf.c",
        "upstream-freebsd/lib/msun/src/s_llround.c",
        "upstream-freebsd/lib/msun/src/s_llroundf.c",
        "upstream-freebsd/lib/msun/src/s_log1p.c",
        "upstream-freebsd/lib/msun/src/s_log1pf.c",
        "upstream-freebsd/lib/msun/src/s_logb.c",
        "upstream-freebsd/lib/msun/src/s_logbf.c",
        "upstream-freebsd/lib/msun/src/s_lrint.c",
        "upstream-freebsd/lib/msun/src/s_lrintf.c",
        "upstream-freebsd/lib/msun/src/s_lround.c",
        "upstream-freebsd/lib/msun/src/s_lroundf.c",
        "upstream-freebsd/lib/msun/src/s_modf.c",
        "upstream-freebsd/lib/msun/src/s_modff.c",
        "upstream-freebsd/lib/msun/src/s_nan.c",
        "upstream-freebsd/lib/msun/src/s_nearbyint.c",
        "upstream-freebsd/lib/msun/src/s_nextafter.c",
        "upstream-freebsd/lib/msun/src/s_nextafterf.c",
        "upstream-freebsd/lib/msun/src/s_remquo.c",
        "upstream-freebsd/lib/msun/src/s_remquof.c",
        "upstream-freebsd/lib/msun/src/s_rint.c",
        "upstream-freebsd/lib/msun/src/s_rintf.c",
        "upstream-freebsd/lib/msun/src/s_round.c",
        "upstream-freebsd/lib/msun/src/s_roundf.c",
        "upstream-freebsd/lib/msun/src/s_scalbln.c",
        "upstream-freebsd/lib/msun/src/s_scalbn.c",
        "upstream-freebsd/lib/msun/src/s_scalbnf.c",
        "upstream-freebsd/lib/msun/src/s_signgam.c",
        "upstream-freebsd/lib/msun/src/s_significand.c",
        "upstream-freebsd/lib/msun/src/s_significandf.c",
        "upstream-freebsd/lib/msun/src/s_sin.c",
        "upstream-freebsd/lib/msun/src/s_sincos.c",
        "upstream-freebsd/lib/msun/src/s_tan.c",
        "upstream-freebsd/lib/msun/src/s_tanf.c",
        "upstream-freebsd/lib/msun/src/s_tanh.c",
        "upstream-freebsd/lib/msun/src/s_tanhf.c",
        "upstream-freebsd/lib/msun/src/s_tgammaf.c",
        "upstream-freebsd/lib/msun/src/s_trunc.c",
        "upstream-freebsd/lib/msun/src/s_truncf.c",
        "upstream-freebsd/lib/msun/src/w_cabs.c",
        "upstream-freebsd/lib/msun/src/w_cabsf.c",
        "upstream-freebsd/lib/msun/src/w_cabsl.c",
        "upstream-freebsd/lib/msun/src/w_drem.c",
        "upstream-freebsd/lib/msun/src/w_dremf.c",
        "upstream-netbsd/lib/libm/complex/ccoshl.c",
        "upstream-netbsd/lib/libm/complex/ccosl.c",
        "upstream-netbsd/lib/libm/complex/cephes_subrl.c",
        "upstream-netbsd/lib/libm/complex/cexpl.c",
        "upstream-netbsd/lib/libm/complex/csinhl.c",
        "upstream-netbsd/lib/libm/complex/csinl.c",
        "upstream-netbsd/lib/libm/complex/ctanhl.c",
        "upstream-netbsd/lib/libm/complex/ctanl.c",
        "digittoint.c",
        "significandl.c",
        "fake_long_double.c",
        "builtins.cpp",
        "signbit.cpp",
    ],
)

genrule(
    name = "libm.arm.map",
    cmd = "$(location :bionic-generate-version-script) arm $(SRCS) $(OUTS)",
    outs = [
        "libm.arm.map",
    ],
    srcs = [
        "libm.map.txt",
    ],
    tools = [
        ":bionic-generate-version-script",
    ],
)

genrule(
    name = "libm.arm64.map",
    cmd = "$(location :bionic-generate-version-script) arm64 $(SRCS) $(OUTS)",
    outs = [
        "libm.arm64.map",
    ],
    srcs = [
        "libm.map.txt",
    ],
    tools = [
        ":bionic-generate-version-script",
    ],
)

cc_library(
    name = "libm.llndk",
)

genrule(
    name = "libm.x86.map",
    cmd = "$(location :bionic-generate-version-script) x86 $(SRCS) $(OUTS)",
    outs = [
        "libm.x86.map",
    ],
    srcs = [
        "libm.map.txt",
    ],
    tools = [
        ":bionic-generate-version-script",
    ],
)

genrule(
    name = "libm.x86_64.map",
    cmd = "$(location :bionic-generate-version-script) x86_64 $(SRCS) $(OUTS)",
    outs = [
        "libm.x86_64.map",
    ],
    srcs = [
        "libm.map.txt",
    ],
    tools = [
        ":bionic-generate-version-script",
    ],
)