

genrule(
    name = "libm.arm.map",
    cmd = "$(location :bionic-generate-version-script) arm $(SRCS) $(OUTS)",
    outs = [
        "libm.arm.map",
    ],
    srcs = [
        "libm.map.txt",
    ],
    tools = [
        ":bionic-generate-version-script",
    ],
)

genrule(
    name = "libm.arm64.map",
    cmd = "$(location :bionic-generate-version-script) arm64 $(SRCS) $(OUTS)",
    outs = [
        "libm.arm64.map",
    ],
    srcs = [
        "libm.map.txt",
    ],
    tools = [
        ":bionic-generate-version-script",
    ],
)

genrule(
    name = "libm.x86.map",
    cmd = "$(location :bionic-generate-version-script) x86 $(SRCS) $(OUTS)",
    outs = [
        "libm.x86.map",
    ],
    srcs = [
        "libm.map.txt",
    ],
    tools = [
        ":bionic-generate-version-script",
    ],
)

genrule(
    name = "libm.x86_64.map",
    cmd = "$(location :bionic-generate-version-script) x86_64 $(SRCS) $(OUTS)",
    outs = [
        "libm.x86_64.map",
    ],
    srcs = [
        "libm.map.txt",
    ],
    tools = [
        ":bionic-generate-version-script",
    ],
)