package(default_visibility = ["//visibility:public"])
load("@bp2build//build/bazel/rules:soong_module.bzl", "soong_module")



cc_library(
    name = "clang_diagnostic_tests",
    copts = [
        "-Xclang",
        "-verify",
    ],
    srcs = [
        "sys_ioctl_diag_test.cpp",
    ],
)

cc_library(
    name = "fortify_disabled_for_tidy",
    copts = [
        "-Wno-builtin-memcpy-chk-size",
        "-Wno-format-security",
        "-Wno-format-zero-length",
        "-Wno-fortify-source",
        "-Wno-memset-transposed-args",
        "-Wno-strlcpy-strlcat-size",
        "-Wno-strncat-size",
        "-Werror",
        "-D_FORTIFY_SOURCE=2",
        "-D__clang_analyzer__",
    ],
    srcs = [
        "clang_fortify_tests.cpp",
    ],
)

cc_library(
    name = "libBionicFramePointerTests",
    copts = [
        "-fstack-protector-all",
        "-g",
        "-Wall",
        "-Wextra",
        "-Wunused",
        "-Werror",
        "-fno-builtin",
        "-Wno-deprecated-declarations",
        "-Wno-invalid-offsetof",
        "-D__STDC_LIMIT_MACROS",
        "-fno-omit-frame-pointer",
    ],
    srcs = [
        "android_unsafe_frame_pointer_chase_test.cpp",
    ],
)