# Targets required to build async_safe for the target device.
# There are many internal utility targets here.
package(default_visibility = ["//visibility:public"])

cc_library(
    name = "async_safe",
    srcs = [
        "async_safe_log.cpp",
    ],
    hdrs = glob(["include/**/*.h"]),
    includes = [
        "include",
    ],
    deps = [
        "//bionic/libc:bionic_includes",
        "//bionic/libc:includes",
        "//bionic/libc:includes_for_bionic",
        "//system/logging/liblog:includes",
    ],
)

cc_library(
    name = "includes",
    hdrs = glob(["include/**/*.h"]),
    includes = [
        "include",
    ],
    deps = [
        "//bionic/libc:bionic_includes",
        "//bionic/libc:includes",
        "//bionic/libc:includes_for_bionic",
        "//system/logging/liblog:includes",
    ],
)
