# NOTE: THIS FILE IS EXPERIMENTAL FOR THE BAZEL MIGRATION AND NOT USED FOR
# YOUR BUILDS CURRENTLY.
#
# It is not yet the source of truth for your build. If you're looking to modify
# the build file, modify the Android.bp file instead. Do *not* modify this file
# unless you have coordinated with the Bazel team managing the Soong to Bazel
# migration.

# Targets required to build system_properties for the target device.
package(default_visibility = ["//visibility:public"])

load("//bionic/libc:libc_flags.bzl", "LIBC_CFLAGS")

cc_library(
    name = "includes",
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
)

cc_library(
    name = "system_properties",
    srcs = [
        # buildifier: do not sort
        # This is kept unalphabetized to match soong "libsystemproperties" module.
        # Soong does not sort source files because the ordering of the list can be
        # meaningful.
        "context_node.cpp",
        "contexts_split.cpp",
        "contexts_serialized.cpp",
        "prop_area.cpp",
        "prop_info.cpp",
        "prop_trace.cpp",
        "system_properties.cpp",
    ],
    copts = LIBC_CFLAGS,
    deps = [
        ":includes",
        "//bionic/libc:bionic_includes",
        "//bionic/libc:includes",
        "//bionic/libc:includes_for_bionic",
        "//bionic/libc/async_safe:includes",
        "//bionic/libstdc++:includes",
        "//system/core/libcutils:includes",
        "//system/core/property_service/libpropertyinfoparser",
    ],
)
